--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 
 <html lang="en"> 
-
-    <header>About me</header>
-    <header>Work</header> 
-    <header>Contact me</header> 
-    <header>Resume</header>
-
-<h2>Mike's Website</h2>
-
-
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles.css" /> 
-    <title>Link CSS to HTML</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="styles.css" /> 
+        <title>Link CSS to HTML</title>
+    </head>
 <body>
-    <title>Mikes's Website</title>  
+ 
 
-    <body> 
+<header> 
+    <nav class="flex container"
+    <div>
+   <h2>Michael Kent</h2>    
+    </div>
+    <ul>
+    <li><a href="#aboutme">About me</a></li>
+    <li><a href="#work">Work</a></li> 
+    <li><a href="contactme">Contact me</a></li> 
+    <li><a href="resume">Resume</a></li>
+    </ul>
+</header>
+
+   <main>
         <aside>
-        <h2>About Me</h2> 
+        <h2>About me</h2> 
         <h2>Work</h2> 
         <h2>Contact Me</h2> 
         </aside>
-    </body>
-    
-    
+    </main>
+</body>
