--- a/index.html
+++ b/index.html
@@ -34,20 +34,18 @@
         </nav>
     </header>
 
-        <div class="banner">
-        <h2 class="cool-subtitle">Wubalubadubdub
-            
+    <div class="banner">
+        <h2 class="cool-subtitle">Wubalubadubdub</h2>
+    </div>
 
-        </h2>
-
-         </div>
-
-        <aside class="about-container">
-            <h2>About me</h2>
-        </aside>
-        <section>
-            <p>My name is Michael Kent</p>
-        </section>
+    <aside class="about-container"
+        class="about-flexbox" 
+        class="about-me">
+        <h2>About me</h2>
+    </aside>
+    <section>
+        <h2>My name is Mike</h2>
+    </section>
 </body>
 
 </html>
