Touched up the html and cleaned up the pictures

--- a/index.html
+++ b/index.html
@@ -34,18 +34,101 @@
         </nav>
     </header>
 
+
     <div class="banner">
         <h2 class="cool-subtitle">Wubalubadubdub</h2>
     </div>
+    <main>
+        <sect class="section" id="aboutme">
+            <h1>About<br>Me</h1>
+            <span id="cards">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quidem eveniet provident, velit
+                    totam officia. Et natus obcaecati ipsam voluptas. Consequatur ipsa veniam, nemo enim amet facilis at
+                    incidunt ad.
 
-    <aside class="about-container"
-        class="about-flexbox" 
-        class="about-me">
-        <h2>About me</h2>
-    </aside>
-    <section>
-        <h2>My name is Mike</h2>
-    </section>
+
+                    <br>
+                    <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem vero, quaerat provident ratione
+                    suscipit quam excepturi voluptatem incidunt labore voluptate? Quidem numquam tempora corporis
+                    suscipit sint assumenda cum repellat quibusdam temporibus eveniet praesentium earum modi ratione
+                    nostrum recusandae repellendus distinctio a illum amet asperiores, sit pariatur ea. Dolores
+                    quibusdam quas dolor maiores quidem velit earum culpa pariatur non, unde, ipsa eum. Officia
+                    accusamus dolorum asperiores, commodi error harum ex aut voluptatum, laudantium nostrum ipsum,
+                    consequuntur sunt cupiditate earum assumenda itaque cum a excepturi eligendi maxime placeat tempora
+                    quis iusto! Delectus voluptatum nihil aliquid tenetur impedit itaque dignissimos suscipit numquam
+                    quas.
+                </p>
+            </span>
+        </sect>
+        <sect2 class="section" id="work">
+            <h1 id="cardtitle">Work</h1>
+            <span id="cards">
+
+                <span id="r">
+                    <proj class="card" id="big-card">
+                        <span id="card-label">
+                            <h3>Surf Report</h3>
+                            <h5>MERN Stack</h5>
+                        </span>
+                    </proj>
+
+                </span>
+
+                <span id="r">
+                    <proj class="card" id="small-card1">
+                        <span id="card-label">
+                            <h3>LED Wall</h3>
+                            <h5>Node/Iot</h5>
+                        </span>
+                    </proj>
+                    <proj class="card" id="small-card2">
+                        <span id="card-label">
+                            <h3>Calculator</h3>
+                            <h5>React/Javascript/CSS</h5>
+                        </span>
+                    </proj>
+                </span>
+
+                <span id="r">
+                    <proj class="card" id="small-card3">
+                        <span id="card-label">
+                            <h3>Pastel Puzzles</h3>
+                            <h5>MERN Stack</h5>
+                        </span>
+                    </proj>
+                    <proj class="card" id="small-card4">
+                        <span id="card-label">
+                            <h3>Run Buddy</h3>
+                            <h5>HTML/CSS</h5>
+                        </span>
+                    </proj>
+                </span>
+            </span>
+        </sect2>
+
+        <sect3 class="section" id="contactme">
+            <h1 id="cardtitle">Contact me</h1>
+        </sect3>
+
+
+
+
+
+
+
+        </span>
+    </main>
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
