--- a/index.html
+++ b/index.html
@@ -15,31 +15,34 @@
         <h1 class="webpage-title">Portfolio</h1>
         <nav>
             <ul class="no-bullets nav-li">
-
+    <!-- I used the unordered list tag and took the bullets off to organize the tags -->
                 <li class="about-me-link" data-nav-link="">
-                    <a href="#about-me">About me</a>
+                    <a href="#about-me" class="nav-anchor">About me</a>
                 </li>
 
                 <li data-nav-link="">
-                    <a href="#work">Work</a>
+                    <a href="#work" class="nav-anchor" >Work</a>
                 </li>
 
                 <li data-nav-link="">
-                    <a href="#contact">Contact</a>
+                    <a href="#contact" class="nav-anchor">Contact</a>
                 </li>
                 <li data-nav-link="">
-                    <a href="#resume">Resume</a>
+                    <a href="#resume" class="nav-anchor" >Resume</a>
                 </li>
             </ul>
         </nav>
     </header>
 
+ <!-- This is my navigation bar for my Portfolio project, I was able to get the hover function working and clickable  -->
 
     <div class="banner">
-        <h2 class="cool-subtitle">Wubalubadubdub</h2>
-    </div>
+        <h2 class="cool-subtitle">Wubalubadubdub</h2> 
+        <!-- What's cooler than Wubalubadubdub??  -->
+    </div> 
     <main>
-        <sect class="section" id="aboutme">
+        <sect class="section" id="aboutme"> 
+            <!-- I used the br code to break up the About Me heading so it would Stack -->
             <h1>About<br>Me</h1>
             <span id="cards">
                 <p>
@@ -66,16 +69,15 @@
             <h1 id="cardtitle">Work</h1>
             <span id="cards">
 
-                <span id="r">
-                    <proj class="card" id="big-card">
+                <a  id="r" href=" https://jamesgit22.github.io/Date-on-a-Dime/">  
+                <!-- <span id="r"> -->
+                     <proj class="card" id="big-card">
                         <span id="card-label">
-                            <h3>Surf Report</h3>
-                            <h5>MERN Stack</h5>
+                        <h1>Project 1</h1>
                         </span>
                     </proj>
-
-                </span>
-
+                <!-- </span> -->
+                </a>  
                 <span id="r">
                     <proj class="card" id="small-card1">
                         <span id="card-label">
@@ -111,23 +113,8 @@
         <sect3 class="section" id="contactme">
             <h1 id="cardtitle">Contact me</h1>
         </sect3>
-
-
-
-
-
-
-
         </span>
     </main>
-
-
-
-
-
-
-
-
 
 </body>
 
