project two update

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                     </proj>
                 <!-- </span> -->
                 </a>  
-                <span id="r">
+                <span id="s" href=" https://mikek1639.github.io/Heartfelt-RSVP/ ">
                     <proj class="card" id="small-card1">
                         <span id="card-label">
-                            <h3>LED Wall</h3>
-                            <h5>Node/Iot</h5>
+                            
+                            <h5>Heartfelt-RSVP</h5> 
                         </span>
                     </proj>
                     <proj class="card" id="small-card2">
